tests/fixtures/invalid/missing_no_edge.mmd
flowchart TD
    Start --> A{x > 0?}
    A -->|Yes| End
